--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -35,9 +35,9 @@
 </script>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Visualizing Baltimore Murals</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Visualizing Baltimore</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -45,10 +45,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Map View</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Image View</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Camera View</a>
+              <a class="nav-link js-scroll-trigger" href="#about2">Camera View</a>
             </li>
           </ul>
         </div>
@@ -56,9 +56,8 @@
     </nav>
 
 
-
     <!-- About Section -->
-    <section id="about" class="about-section text-center"smooth-parallax start-position-y="-0.1">
+    <section id="about" class="about-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -72,7 +71,7 @@
     </section>
 
      <!-- About Section -->
-    <section id="about2" class="about-section text-center"smooth-parallax start-position-y="-0.1">
+    <section id="about2" class="about-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
