--- a/mural-latest.html
+++ b/mural-latest.html
@@ -61,17 +61,19 @@
       	var last = artists.lastIndexOf(",")
       	artists = artists.substring(0, last - 1) + " and " + artists.substring(last + 1)
       }
-      var image = feature.properties.images
 
-      if (image.includes("/") == false) {
-      	image = "https://okeducationtruths.files.wordpress.com/2016/09/not-pictured.png?w=285&h=300"
-      } else {
+      var image = "hi"
+
+      if ("images" in feature.properties) {
+      	image = feature.properties.images
       	image = image.substring(2, image.length-2)
+      } else {
+      	image = "https://error"
       }
 
       popup
         .setLngLat(feature.geometry.coordinates)
-        .setHTML('<h3>' + feature.properties.address + '</h3><p>' + "Created by " + artists + '</p>' + '<img src="' + image + '" alt="Not pictured." style="width:300px;height:200px;">')
+        .setHTML('<h3>' + feature.properties.address + '</h3><p>' + "Created by " + artists + '</p>' + '<img src="' + image + '" alt="Picture not in database." style="width:300px;height:200px;">')
         .setLngLat(feature.geometry.coordinates)
         .addTo(map);
     });
