--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -24,6 +24,11 @@
   </head>
 
   <body id="page-top">
+
+
+
+
+
 <div id="particles-js" ></div>
 <script type="text/javascript" src="particles.js"></script>
 <script type="text/javascript" src="app.js"></script>
@@ -32,8 +37,11 @@
   window.addEventListener("load", function () {
     SmoothParallax.init();
   });
+
 </script>
 
+
+</div>
     <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
@@ -54,8 +62,6 @@
         </div>
       </div>
     </nav>
-
-
     <!-- About Section -->
     <section id="about" class="about-section text-center">
       <div class="container">
