--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -25,9 +25,16 @@
 
   <body id="page-top">
 
+<div class = 'logo'>
+<!--   all your other divs part of the web content (images,text,etc) -->
+<h1 class="ml16"><br><br>Visualizing Baltimore Murals</h1>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 
 
+
+</div>
 
 <div id="particles-js" ></div>
 <script type="text/javascript" src="particles.js"></script>
@@ -41,7 +48,6 @@
 </script>
 
 
-</div>
     <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
